# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=z8k-dis.c
srcname="opcodes"

# per-host:

. ${srcdir}/../bfd/configure.host

# Set up to make a link between the host's include file and "sysdep.h".
files="../bfd/hosts/${my_host}.h"

links="sysdep.h"

if [ ! -f ${srcdir}/${files} ] ; then
	if [ -n "${my_host}" ] ; then
		echo '***' No file ${srcdir}/${files} 1>&2
	fi
	echo '***' ${srcname} does not support host ${host} 1>&2
	exit 1
fi

host_makefile_frag=
if [ -f ${srcdir}/../bfd/config/${my_host}.mh ] ; then
	host_makefile_frag=../bfd/config/${my_host}.mh
fi

# per-target:
