# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=bfd.texinfo
srcname="BFD doc"

# per-host:

# per-target:
