# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

configdirs=
srctrigger=fib.cc
srcname="GNU C++ Class Library: libg++.a/etc/fib"

# per-host:

#host_makefile_frag=../../Make.defs

# per-target:

